@@ -1,6 +1,6 @@
 {
   "name": "ethereum-markdown-reader",
-  "version": "0.0.41",
+  "version": "0.0.5",
   "description": "Development environment for ethereum-markdown-reader",
   "keywords": [],
   "author": "Dean Vaessen <hello@deanvaessen.com>",
