@@ -16,11 +16,13 @@
 	<div id="app__error" class="errorText">
 		<h1>Oops!</h1>
 
-		You shouldn't be seeing this. Did you add a file to the URL?
+		<p>You shouldn't be seeing this. Did you add a file to the URL?
+		<br />
+		Also check if the app was initiated correctly and knows the path to the storage of your files, the baseURL (see documentation).</p>
 
 		<br />
-		<br />
-		Here are some examples:
+		<p> Here are some navigation examples:</p>
+
 		<ul>
 			<li><a href="#book1.md">/#book1.md</a></li>
 			<li><a href="#book2.md">/#book2.md</a></li>
