@@ -4,3 +4,4 @@
 14/01/2017 : 0.0.3 - Added file fragment URL verification (single, multiple dots, illegal characters, file extention).
 14/01/2017 : 0.0.4 - Build process optimalisation and file size improvement. Updated documentation.
 14/01/2017 : 0.0.41 - Updated documentation.
+15/01/2017 : 0.0.5 - Changed initiation of the app to accept argument of baseURL on runtime, see updated documentation.
